--- a/server-side/Views/LogIn/logIn.cshtml
+++ b/server-side/Views/LogIn/logIn.cshtml
@@ -20,10 +20,10 @@
                     <form accept-charset="UTF-8" role="form">
                         <fieldset>
                             <div class="form-group">
-                                @Html.TextBoxFor(model => model.userName, new { @class="form-control", @placeholder = "Username", @name = "userName", @type = "text"})
+                                @Html.TextBoxFor(model => model.Username, new { @class="form-control", @placeholder = "Username", @name = "Username", @type = "text"})
                             </div>
                             <div class="form-group">
-                                @Html.TextBoxFor(model => model.passWord, new {@class = "form-control", @placeholder = "Password", @name = "passWord", @type = "password"})
+                                @Html.TextBoxFor(model => model.Password, new {@class = "form-control", @placeholder = "Password", @name = "Password", @type = "password"})
                             </div>
                           
                             <input class="btn btn-lg btn-success btn-block" type="submit" value="Login">
