--- a/server-side/Views/LogIn/loggedInScreen.cshtml
+++ b/server-side/Views/LogIn/loggedInScreen.cshtml
@@ -5,5 +5,5 @@
 }
 @using service.Security
 <h2>loggedInScreen</h2>
-<h3>Welcome @SessionPersister.userName</h3>
+<h3>Welcome @SessionPersister.Username</h3>
 
