Nästan klar med db-testanslutning

--- a/server-side/Views/Authors/authorDetails.cshtml
+++ b/server-side/Views/Authors/authorDetails.cshtml
@@ -3,7 +3,10 @@
     ViewBag.Title = "authorDetails";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+@if (ViewBag.serverError != null)
+{
+    <h1>@ViewBag.serverError</h1>
+}
 
     
 
