--- a/server-side/Views/Authors/createAuthor.cshtml
+++ b/server-side/Views/Authors/createAuthor.cshtml
@@ -3,7 +3,10 @@
     ViewBag.Title = "createAuthor";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+@if (ViewBag.serverError != null)
+{
+    <h1>@ViewBag.serverError</h1>
+}
 
 
 
