--- a/server-side/Views/Books/books.cshtml
+++ b/server-side/Views/Books/books.cshtml
@@ -31,6 +31,10 @@
 
         </div>
     }</div>
+
+       
+<h1>@ViewBag.serverError</h1>
+        
     <!-- Table -->
     @if (Model.Count != 0)
     {
