--- a/server-side/Views/LogIn/logIn.cshtml
+++ b/server-side/Views/LogIn/logIn.cshtml
@@ -17,6 +17,7 @@
                     @using (Html.BeginForm("logIn", "LogIn", FormMethod.Post))
                     {
                         @ViewBag.Error
+                        @ViewBag.serverError
                     <form accept-charset="UTF-8" role="form">
                         <fieldset>
                             <div class="form-group">
