--- a/server-side/Views/LogIn/loggedInScreen.cshtml
+++ b/server-side/Views/LogIn/loggedInScreen.cshtml
@@ -4,6 +4,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @using service.Security
-<h2>loggedInScreen</h2>
-<h3>Welcome @SessionPersister.Username</h3>
+
+<div class="container">
+    <div class="col-md-4 alert-success col-lg-offset-4 ">
+        <h2>You are now logged in</h2>
+        <h3>Welcome @SessionPersister.Username</h3>
+
+
+
+    </div>
+</div>
+
+
+
 
