--- a/server-side/Views/Authors/authorDetails.cshtml
+++ b/server-side/Views/Authors/authorDetails.cshtml
@@ -3,10 +3,9 @@
     ViewBag.Title = "authorDetails";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@if (ViewBag.serverError != null)
-{
+
     <h1>@ViewBag.serverError</h1>
-}
+
 
     
 
@@ -22,8 +21,12 @@
                     <small>Books:</small>
                     @foreach (var books in Model.bookList)
                     {
-                        <small>@books.Title</small>
+                        <a href='@Url.Action("bookDetails", "Books", new {isbn = books.ISBN})'>@books.Title |</a>
                     }
+                  
+                    
+
+
                     <div class="col-md-12">
                         <a id="editButton" class="glyphicon glyphicon-cog btn btn-sm btn-default pull-right" href='@Url.Action("showEditAuthor", "Authors", new {aID = @Model.Aid})'></a>
 
