--- a/server-side/Views/Authors/createAuthor.cshtml
+++ b/server-side/Views/Authors/createAuthor.cshtml
@@ -3,14 +3,13 @@
     ViewBag.Title = "createAuthor";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@if (ViewBag.serverError != null)
-{
+
     <h1>@ViewBag.serverError</h1>
-}
 
 
 
 
+<h1>Create Author</h1>
 @using (Html.BeginForm("createAuthor", "Authors", FormMethod.Get))
 {   
     <form>
