--- a/server-side/Views/Books/createBook.cshtml
+++ b/server-side/Views/Books/createBook.cshtml
@@ -6,7 +6,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create Book</h2>
+    <h1>@ViewBag.serverError</h1>
+
+
 @using (Html.BeginForm("createBook", "Books", FormMethod.Get))
 {
 <form>
@@ -19,7 +21,7 @@
     <label for="sel1">Select author:</label>
 
     <div id="authorDiv">
-        <select class="form-control" name="aID">
+        <select class="form-control" id="authorSelect" name="aID">
             @foreach (var author in Model.authorList)
             {
 
