--- a/server-side/Views/Books/editBook.cshtml
+++ b/server-side/Views/Books/editBook.cshtml
@@ -1,6 +1,8 @@
 ﻿@model service.Models.viewModel
 
 
+<h1>@ViewBag.serverError</h1>
+
 
 
 @using (Html.BeginForm("editBook", "Books", FormMethod.Get))
